# StorytellingSystem

./: README.md  docker-compose.yml  pyproject.toml
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js  documents.js  sessions.js
frontend/src/components/: DocumentsTab.jsx  Navbar.jsx
frontend/src/pages/: ErrorPage.jsx  HomePage.jsx  LoginPage.jsx  RegisterPage.jsx  SessionPage.jsx  VerifyPage.jsx  WorldPage.jsx  WorldsPage.jsx
frontend/src/styles/: auth.css  global.css  home.css  navbar.css  session.css  world.css  worlds.css
services/api-gateway/: emp_structure.md
services/api-gateway/app/: main.py
services/api-gateway/app/api/: router.py
services/api-gateway/app/core/: config.py  dependencies.py
services/api-gateway/app/proxy/: client.py
services/llm-service/app/: containers.py  main.py
services/llm-service/app/backends/: __init__.py  base.py  openai_backend.py
services/llm-service/app/core/: config.py
services/llm-service/app/schemas/: __init__.py  generation.py
services/llm-service/app/services/: generation.py
services/rag-service/: alembic.ini
services/rag-service/alembic/: env.py
services/rag-service/alembic/versions/: 65c01d8a2590_init_chunks_table.py
services/rag-service/app/: containers.py  main.py
services/rag-service/app/core/: config.py  db.py
services/rag-service/app/embeddings/: __init__.py  model.py
services/rag-service/app/models/: __init__.py  chunk.py
services/story-service/: alembic.ini
services/story-service/alembic/: env.py
services/story-service/app/: containers.py  main.py
(+64 files in other folders)
